fix header alignment fixes #856

--- a/static-src/scss/components/_delagation.scss
+++ b/static-src/scss/components/_delagation.scss
@@ -51,6 +51,10 @@ body .delagation-header {
     .controls {
         @include rem(margin-top, 15px);
     }
+
+    .sub-heading {
+        text-align: left;
+    }
 }
 
 .delegate-image-select {
